testsuite/tests/grammar/invalid_lkt/test.out
== annotated_grammar_1.lkt ==
annotated_grammar_1.lkt:4:24: error: Invalid annotation: foo
4 | @with_lexer(foo_lexer) @foo grammar foo_grammar {
  |                        ^^^^


== annotated_grammar_2.lkt ==
annotated_grammar_2.lkt:4:13: error: Invalid lexer name: 'foo_lexer' expected
4 | @with_lexer(foo_grammar) grammar foo_grammar {
  |             ^^^^^^^^^^^


== basic.lkt ==
Code generation was successful

== invalid_decl.lkt ==
invalid_decl.lkt:6:5: error: grammar rule expected, got grammar declaration
6 |     @with_lexer(foo_lexer) grammar unexpected_decl {
  |     ^


== invalid_main_rule_annot.lkt ==
invalid_main_rule_annot.lkt:5:6: error: This annotation accepts no argument
5 |     @main_rule ("foo") main_rule <- Example("example")
  |      ^^^^^^^^^


== invalid_token.lkt ==
invalid_token.lkt:4:30: error: Unknown token: UnknownToken
4 |     @main_rule main_rule <- @UnknownToken
  |                              ^^^^^^^^^^^^


== no_grammar.lkt ==
no_grammar.lkt: error: missing grammar

== no_main_rule.lkt ==
no_main_rule.lkt:4:24: error: main rule missing (@main_rule annotation)
4 | @with_lexer(foo_lexer) grammar foo_grammar {


== null_no_type.lkt ==
null_no_type.lkt:5:29: error: Null parser requires a node type
5 |     @main_rule main_rule <- null
  |                             ^^^^


== several_main_rules.lkt ==
several_main_rules.lkt:6:5: error: only one main rule allowed
6 |     @main_rule main_rule2 <- Example("example")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== transform_invalid_node.lkt ==
transform_invalid_node.lkt:5:29: error: no entity called 'NoSuchNode' in the root scope
5 |     @main_rule main_rule <- NoSuchNode("example")
  |                             ^^^^^^^^^^


== two_grammar_files.lkt ==
basic.lkt:4:1: error: only one grammar allowed (previous found at two_grammar_files.lkt:4:1)
4 | @with_lexer(foo_lexer) grammar foo_grammar {
  | ^


== two_grammar_files_2.lkt ==
basic.lkt:4:24: error: this declaration conflicts with the grammar foo_grammar at two_grammar_files_2.lkt:4:24
4 | @with_lexer(foo_lexer) grammar foo_grammar {


== two_grammars.lkt ==
two_grammars.lkt:7:1: error: only one grammar allowed (previous found at two_grammars.lkt:4:1)
7 | @with_lexer(foo_lexer) grammar foo_grammar2 {
  | ^


== unknown_rule_annot.lkt ==
unknown_rule_annot.lkt:6:5: error: Invalid annotation: foo
6 |     @foo rule2 <- Example("example")
  |     ^^^^


lkt_compile: Done
